feat: CareerLoop product completion (phases 0-9)
Bring CareerLoop from buggy MVP to launch-ready by closing the Sprint C/D
backlog, fixing 10 critical correctness/security bugs, and rebuilding the
homepage around live Bilibili content. See WECHAT_MP_CONFIG.md for the
WeChat MP backend whitelist required to ship.

Headline changes:
- Phase 1: 3 IDOR/auth fixes + 7 correctness fixes (JWT secret, AI prompts,
  streaming history, radarChart parsing, OSS orphan files, etc.)
- Phase 2: Bilibili WBI client + DailyJob + 3 new home_* tables; home page
  rebuilt as 4 sections (videos / articles / consultations / careerCards)
  with pull-to-refresh and per-day-stable random sampling
- Phase 3: 7-day check-in (CheckInService + CheckInController, auto-trigger
  from assessment/interview/career-node, home card + calendar page)
- Phase 4: Question market (interview_questions + QuestionBankController +
  contribute/like/draw, market/index.vue, opening prompt drawer)
- Phase 5: Weekly report (WeeklyReportJob @Scheduled + Qwen 50-char delta
  summary + notifications + admin manual-trigger endpoints)
- Phase 6: Body Language sidecar (FastAPI+MediaPipe under body-lang-sidecar/,
  docker-compose integration, room.vue 3s frame capture, report.vue 6th
  radar dimension)
- Phase 7: Admin console (admin-frontend/ Vue3+Element Plus + AdminController
  with org dashboard / students / skill map CRUD / question moderation,
  organizations table)
- Phase 8: WECHAT_MP_CONFIG.md domain whitelist + smoke checklist; vue-tsc
  --noEmit and mvn test stay green (59/59 backend tests pass)
- Phase 9: TODO.md fully ticked off, technical-debt items moved to BACKLOG.md

Made-with: Cursor